2003-01-25 Daniel Luederwald <das_flip@gmx.de>

	* PCBrowserController.m: Add gsmarkup to editable files.
	(isEditableFiles:): Idem, but don't allow editing if extension
	is gorm (patch from Adam Fedor  <fedor@gnu.org>).
	* PCProjectDebugger.m (run:): Add PCRenaissanceProject.

2002-11-27  Philippe C.D. Robert  <probert@siggraph.org>

	* Extracting UI code into separate categories. PBX project file for
	Mac OS X using Cocoa.

2002-11-24  Philippe C.D. Robert  <probert@siggraph.org>

	* Fixing import statements in most headers and source files preparing 
	a Mac OS X port.

2002-11-04  Adam Fedor  <fedor@gnu.org>

	* PCFileManager.m (-showAddFileWindow): Only copy file if it isn't
	already there.

2002-10-06 15:45  probert

	* PCEditor.h, PCEditor.m, PCEditorView.m, PCProjectEditor.h,
	PCProjectEditor.m: Updated the AUTHORS file and applied David
	Ayers' patch.

2002-08-10 14:10  probert

	* PCEditor.m: Applied patch sent in by O. Kornilov to avoid
	exception when clicking on file name in browser

2002-08-10 13:41  probert

	* PCEditorView+Highlighting.m: Removed call to super's initialize

2002-06-01 16:00  probert

	* ChangeLog: Updated ChangeLogs

2002-06-01 15:55  probert

	* PCMakefileFactory.m: Code cleanup

2002-06-01 15:46  probert

	* GNUmakefile, PCBundleLoader.m, PCMakefileFactory.m,
	ProjectCenter.pcproj: Fixed a bug in the lib makefile creation
	part.

2002-04-26 05:12  fedor

	* ChangeLog, GNUmakefile, PCBrowserController.m,
	PCHistoryController.m, PCProject.m, PCProjectManager.m: removed
	bunches of duplicate calls, retains and releases.

2002-04-25 23:12  fedor

	* ChangeLog, PCBrowserController.m, PCHistoryController.m: Retain
	browser

2002-03-25 20:37  probert

	* ChangeLog, Version: ChangeLog updates

2002-03-03 14:47  probert

	* PCHistoryController.m, PCProject.m: Fixed mem leak in the history
	controller.

2002-03-02 14:58  probert

	* PCEditor.m, PCEditorView.m: Editors should now use the font
	panel.

2002-03-02 14:15  probert
